#///////////////////////////////////////////////////////////////////////////////
#  Copyright (c) 2010, Michael A. Jackson. BlueQuartz Software
#  All rights reserved.
#  BSD License: http://www.opensource.org/licenses/bsd-license.html
#///////////////////////////////////////////////////////////////////////////////
project(QtSupport)


if(NOT Qt5Core_FOUND)
    message(FATAL_ERROR "Qt 5 is Needed for this project.")
endif()


set(Project_SRCS "")
set(Project_HDRS "")

set(QtSupport_SRCS
    ${QtSupport_SOURCE_DIR}/AIMImageGraphicsDelegate.cpp
    ${QtSupport_SOURCE_DIR}/DREAM3DPluginFrame.cpp
    ${QtSupport_SOURCE_DIR}/ApplicationAboutBoxDialog.cpp
    ${QtSupport_SOURCE_DIR}/ColorComboPicker.cpp
    ${QtSupport_SOURCE_DIR}/QFileCompleter.cpp
    ${QtSupport_SOURCE_DIR}/QRecentFileList.cpp
    ${QtSupport_SOURCE_DIR}/QFSDropLineEdit.cpp
    ${QtSupport_SOURCE_DIR}/QDroppableScrollArea.cpp
    ${QtSupport_SOURCE_DIR}/QCheckboxDialog.cpp
    ${QtSupport_SOURCE_DIR}/HelpDialog.cpp
    ${QtSupport_SOURCE_DIR}/HoverButton.cpp
    ${QtSupport_SOURCE_DIR}/DistributionTypeWidget.cpp
    ${QtSupport_SOURCE_DIR}/DREAM3DHelpUrlGenerator.cpp
    ${QtSupport_SOURCE_DIR}/PoleFigureImageUtilities.cpp
    ${QtSupport_SOURCE_DIR}/DREAM3DGraphicsView.cpp
    ${QtSupport_SOURCE_DIR}/FaderWidget.cpp
    ${QtSupport_SOURCE_DIR}/SearchLineEdit.cpp
    ${QtSupport_SOURCE_DIR}/QFSDropLabel.cpp
    ${QtSupport_SOURCE_DIR}/FileDragMessageBox.cpp
    ${QtSupport_SOURCE_DIR}/DREAM3DStyles.cpp
)

set(QtSupport_HDRS
    ${QtSupport_SOURCE_DIR}/AIMImageGraphicsDelegate.h
    ${QtSupport_SOURCE_DIR}/DREAM3DPluginFrame.h
    ${QtSupport_SOURCE_DIR}/ApplicationAboutBoxDialog.h
    ${QtSupport_SOURCE_DIR}/ColorComboPicker.h
    ${QtSupport_SOURCE_DIR}/QFileCompleter.h
    ${QtSupport_SOURCE_DIR}/QRecentFileList.h
    ${QtSupport_SOURCE_DIR}/QFSDropLineEdit.h
    ${QtSupport_SOURCE_DIR}/QDroppableScrollArea.h
    ${QtSupport_SOURCE_DIR}/QCheckboxDialog.h
    ${QtSupport_SOURCE_DIR}/HelpDialog.h
    ${QtSupport_SOURCE_DIR}/HoverButton.h
    ${QtSupport_SOURCE_DIR}/PoleFigureImageUtilities.h
    ${QtSupport_SOURCE_DIR}/DREAM3DGraphicsView.h
    ${QtSupport_SOURCE_DIR}/FaderWidget.h
    ${QtSupport_SOURCE_DIR}/SearchLineEdit.h
    ${QtSupport_SOURCE_DIR}/QFSDropLabel.h
    ${QtSupport_SOURCE_DIR}/FileDragMessageBox.h
    ${QtSupport_SOURCE_DIR}/DREAM3DStyles.h
)
cmp_IDE_SOURCE_PROPERTIES("QtSupport" "${QtSupport_HDRS}" "${QtSupport_SRCS}" "0")

# --------------------------------------------------------------------
# These are headers that do NOT inherit from QObject and do NOT need MOC run on them
# --------------------------------------------------------------------
set(QtSupport_NO_MOC_HDRS
    ${QtSupport_SOURCE_DIR}/DREAM3DHelpUrlGenerator.h
)


# --------------------------------------------------------------------
# The UI files As generated by Qt Designer
# --------------------------------------------------------------------
SET(DREAM3D_QT_UI_FILES
  ${QtSupport_SOURCE_DIR}/UI_Files/ApplicationAboutBoxDialog.ui
  ${QtSupport_SOURCE_DIR}/UI_Files/HelpDialog.ui
  ${QtSupport_SOURCE_DIR}/UI_Files/DistributionTypeWidget.ui
  ${QtSupport_SOURCE_DIR}/UI_Files/FileDragMessageBox.ui
)
cmp_IDE_SOURCE_PROPERTIES( "QtSupport/UI_Files" "${DREAM3D_QT_UI_FILES}" "" "0")

# and finally any resource files
#SET(QtSupport_RCS ${PROJECT_RESOURCES_DIR}/icons/images/Icons.qrc)

# --------------------------------------------------------------------
# Run on the files
#QT5_ADD_RESOURCES( QtSupport_Generated_RC_SRCS ${QCrossCorrelation_RCS} )

# --------------------------------------------------------------------
# this will run uic on .ui files:
QT5_WRAP_UI( QtSupport_Generated_UI_HDRS ${DREAM3D_QT_UI_FILES} )

# --------------------------------------------------------------------
# and finally this will run moc:
#QT5_WRAP_CPP( QtSupport_Generated_MOC_SRCS ${QtSupport_HDRS} )

# --------------------------------------------------------------------
#-- Put the generated files into their own group for IDEs
cmp_IDE_SOURCE_PROPERTIES( "Generated" "${QtSupport_Generated_UI_HDRS}" "${QtSupport_Generated_MOC_SRCS};${QtSupport_Generated_RC_SRCS}" "0")

set(Project_SRCS ${Project_SRCS}
        ${QtSupport_SRCS}
        ${QtSupport_HDRS}
        ${QtSupport_NO_MOC_HDRS}
        ${QtSupport_Generated_UI_HDRS}
        ${QtSupport_Generated_MOC_SRCS}
        )

include_directories(${QtSupport_SOURCE_DIR}/..)
include_directories(${QtSupport_BINARY_DIR})
include_directories(${QtSupport_BINARY_DIR}/..)
add_definitions(-DQT_CORE_LIB)

if(UNIX AND NOT APPLE)
set_source_files_properties(${Project_SRCS} PROPERTIES COMPILE_FLAGS -fPIC)
endif()

add_library(QtSupport STATIC ${Project_SRCS})
target_link_libraries(QtSupport
                    Qt5::Core
                    Qt5::Gui Qt5::Widgets
                    Qt5::Network
                    )

LibraryProperties( QtSupport ${EXE_DEBUG_EXTENSION})



